# HttpClient

./: .gitignore  CMakeLists.txt  HTTPClient.cpp  HTTPClient.h  HttpResponse.cpp  HttpResponse.h  README.md  main.cpp
http_methods/: HttpGet.cpp  HttpGet.h  HttpHead.cpp  HttpHead.h  HttpMethod.cpp  HttpMethod.h  HttpPost.cpp  HttpPost.h  IHttpMethod.h
response_handlers/: HttpGetResponse.cpp  HttpGetResponse.h  HttpHeadResponse.cpp  HttpHeadResponse.h  IHttpResponse.h
transport/: ClientConnectionPool.cpp  ClientConnectionPool.h  TCPClient.cpp  TCPClient.h  TCPTransportManager.cpp  TCPTransportManager.h
